--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Grounding</title>
+    <link rel="icon" href="assets/favicon-32.png">
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
